kubernetes/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: admin
spec:
  host: admin
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
#  trafficPolicy:
#    connectionPool:
#      http:
#        http1MaxPendingRequests: 1
#        maxRequestsPerConnection: 1
#        maxRetries: 0
#    outlierDetection:
#      consecutive5xxErrors: 3
#      interval: 30s
#      baseEjectionTime: 1m
#      maxEjectionPercent: 100
---
