kubernetes/virtual-services-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin
spec:
  hosts:
    - admin
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 100
      route:
        - destination:
            host: admin
            subset: v1
    - route:
        - destination:
            host: admin
            subset: v1
